--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
-<header>
+<header *ngIf="ChangerHome()">
     <div class="logo">
-        <a [routerLink]="ChangerHome()">
+        <a [routerLink]="link">
             <img src="assets/imgs/logo.svg" alt="">
         </a>
     </div>
