--- a/src/app/components/admin/gallery-item/gallery-item.component.scss
+++ b/src/app/components/admin/gallery-item/gallery-item.component.scss
@@ -7,5 +7,6 @@
     transition-duration: 0.2s;
     &:hover{
         background-color: rgba(255, 255, 255, 0.11);
+        filter: brightness(1.5);
     }
 }
