--- a/src/styles.scss
+++ b/src/styles.scss
@@ -30,7 +30,7 @@ body {
         display: none;
     }
 }
-.copy-container {
+.clone-container {
     position: absolute;
     top: 0px;
     left: 0px;
