--- a/src/app/components/admin/pages/pages.component.scss
+++ b/src/app/components/admin/pages/pages.component.scss
@@ -12,7 +12,8 @@ $size-index: calc(1vw + 1vh);
     position: relative;
     color: rgb(153, 102, 204);
 }
-form{
+
+#search{
     width: 100%;
     height: 15%;
     .left, .right{
@@ -25,6 +26,77 @@ form{
     }
     .right{
         float: right;
+        .btn{
+            width: 18vw;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin: 0px 20px;
+            overflow: visible;
+            position: relative;
+            p{
+                width: 100%;
+                padding: 10px 40px;
+                text-transform: uppercase;
+                background-color: $color;
+                color: white;
+                border-radius: 20px;
+                font-size: calc($size-index * 1);
+                cursor: pointer;
+                transition-duration: 0.5s;
+                text-align: center;
+                margin: 0px;
+                &:hover{
+                    scale: 1.1;
+                }
+            }
+            #createrPages{
+                position: absolute;
+                bottom: -60px;
+                width: 120%;
+                display: flex;
+                align-items: center;
+                overflow: hidden;
+                transition-duration: 0.5s;
+                height: 0px;
+                input{
+                    height: 100%;
+                    width: 80%;
+                    box-sizing: border-box;
+                    background-color: rgb(51, 51, 51);
+                    border: 3px solid $color;
+                    border-right: none;
+                    border-top-left-radius: 10px;
+                    border-bottom-left-radius: 10px;
+                    font-size: calc($size-index * 0.9);
+                    outline: none;
+                    padding-left: 10px;
+                    box-sizing: border-box;
+                    color: white;
+                }
+                button{
+                    width: 20%;
+                    height: 100%;
+                    outline: none;
+                    border: 3px solid $color;
+                    border-left: none;
+                    color: white;
+                    background-color: $color;
+                    text-transform: uppercase;
+                    border-top-right-radius: 10px;
+                    border-bottom-right-radius: 10px;
+                    font-weight: 600;
+                    transition-duration: 0.5s;
+                    &:disabled{
+                        background-color: rgba(78, 32, 125, 0.68);
+                        color: rgb(227, 225, 225);
+                    }
+                    &:not(:disabled){
+                        cursor: pointer;
+                    }
+                }
+            }
+        }
     }
     h2{
         margin: 0px;
@@ -33,6 +105,39 @@ form{
         font-weight: 500;
         letter-spacing: 3px;
         font-size: calc($size-index * 2.2);
+    }
+    .searchField{
+        display: flex;
+        align-items: center;
+        height: 50%;
+        margin-left: 20px;
+        overflow: hidden;
+        input{
+            font-size: calc($size-index * 0.9);
+            position: relative;
+            border: none;
+            outline: none;
+            box-sizing: border-box;
+            background-color: rgb(51, 51, 51);
+            border: 3px solid $color;
+            height: 90%;
+            padding: 10px;
+            color: white;
+            border-radius: 10px;
+        }
+        img{
+            height: 100%;
+            margin-left: 10px;
+            background-color: $color;
+            padding: 5px 20px;
+            border-radius: 10px;
+            box-sizing: border-box;
+            cursor: pointer;
+            transition-duration: 0.5s;
+            &:hover{
+                padding: 5px 30px;
+            }
+        }
     }
 }
 section{
